--- a/package.json
+++ b/package.json
@@ -23,14 +23,24 @@
     "audit": "audit-ci --moderate --package-manager npm",
     "clean": "rimraf node_modules",
     "format": "prettier --write . && eslint --fix .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "test": "mocha"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/register": "^7.17.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "audit-ci": "^5.1.2",
+    "chai": "^4.3.6",
     "eslint": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-pkg": "^0.11.1",
     "rimraf": "^3.0.2",
