--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   ],
   "scripts": {
     "audit": "audit-ci --moderate --package-manager npm",
-    "clean": "rimraf node_modules",
+    "build": "snowpack build",
+    "clean": "rimraf build node_modules web_modules",
     "format": "prettier --write . && eslint --fix .",
     "lint": "prettier --check . && eslint .",
+    "start": "snowpack dev",
     "test": "mocha"
   },
   "devDependencies": {
@@ -32,6 +34,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.17.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@snowpack/plugin-typescript": "^1.2.1",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -44,6 +48,10 @@
     "prettier": "^2.5.1",
     "prettier-plugin-pkg": "^0.11.1",
     "rimraf": "^3.0.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "snowpack": "^3.8.8",
+    "snowpack-plugin-hmr-inject": "^0.1.5",
     "typescript": "^4.5.5"
   },
   "bundleDependencies": false,
