--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "audit": "audit-ci --moderate --package-manager npm",
     "build": "snowpack build",
     "clean": "rimraf build node_modules web_modules",
+    "deploy": "gh-pages --branch main --repo https://github.com/kodi-game/kodi-game.github.io.git --dist build --dotfiles",
     "format": "prettier --write . && eslint --fix .",
     "lint": "prettier --check . && eslint .",
     "start": "snowpack dev",
@@ -44,6 +45,7 @@
     "chai": "^4.3.6",
     "eslint": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-pkg": "^0.11.1",
